v3.10.1 (XXXX-XX-XX)
--------------------

* Fix an issue with replication of arangosearch view change entries in single
  server replication and active failover. Previously, when changing the
  properties of existing views, the changes were not properly picked up by
  followers in these setups. Cluster setups were not affected.


v3.10.0 (2022-09-29)
--------------------

* Convert v3.10.0-rc.1 into v3.10.0.


v3.10.0-rc.1 (2022-09-25)
-------------------------

* Temporary fix for BTS-1006 (hides new view types).

* Fixed SEARCH-399 Rule `restrict-to-single-shard` now works properly with
  inverted index.

* Fixed SEARCH-393 fixed analyzer setting for nested fields.

* APM-517: Add tooltips with values of the displayed properties after clicking a
  node or an edge in the graph viewer.

* Updated arangosync to v2.12.0.

* Improve upload and download speed of hotbackup by changing the way we use
  rclone. Empty hash files are now uploaded or downloaded by pattern, and
  all other files are done in batches without remote directory listing,
  which allows rclone to parallelize and avoid a lot of unnecessary network
  traffic. The format of hotbackups does not change at all.

* Fixed SEARCH-392 Fixed field features propagation.

* Fixed SEARCH-388 Fixed handling nested subfields.

* Fixed SEARCH-379 Transaction is properly set to index during optimization.

* Fixed issue BTS-1018: Improve logging of binary velocypack request data.

* Updated ArangoDB Starter to 0.15.5.

* Fixed BTS-1017: Fixed a graph search issue, where subqueries lead to incorrect
  results when they have been pushed down fully onto a DBServer when they are in
  a Hybrid Disjoint SmartGraph context and SatelliteCollections were part of it.

* Fixed issue BTS-1023:
  Added Linux-specific startup option `--use-splice-syscall` to control whether
  the Linux-specific splice() syscall should be used for copying file contents.
  While the syscall is generally available since Linux 2.6.x, it is also